design new page

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,3 +1,3 @@
-<%= form_with model: @room, local: true do |f| %>
+<%= form_with model: @room, class: "create-room-button", local: true do |f| %>
 <%= f.submit "Create New Room" %>
 <% end %>
