--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -19,6 +19,8 @@
         outline: none;
         padding: 0;
         box-sizing: border-box;
+        padding: 10px;
+        background-color: #f7f7f7;
       }
     }
   }
