--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="left-content">
     <form class="create-message-button">
-      <textarea type="text" class="input-message-area"></textarea>
+      <textarea type="text" placeholder="共有したいメッセージを入力" class="input-message-area"></textarea>
     </form>
   </div>
   <div class="right-content">
@@ -11,9 +11,7 @@
       <div class="line__title">
         Share Area
       </div>
-
-      <!-- ▼会話エリア scrollを外すと高さ固定解除 -->
-      <div class="line__contents scroll">
+      <div class="line__contents">
 
         <!-- 相手の吹き出し -->
         <div class="line__left">
